Fixed issue with art-detail page where text box was aligned to the left at md screen size

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -320,7 +320,7 @@ footer {
 
 /* Art Detail Page CSS */
 
-.art-detail-card {
+/*.art-detail-card {
     border-style: solid;
     border-color: #567d46;
     border-width: 2px; 
@@ -330,6 +330,21 @@ footer {
     margin-left: 20px;
     margin-bottom: 40px;
     background-color: white;
+    
+}*/
+
+.art-detail-image {
+    border-style: solid;
+    border-color: #567d46;
+    border-width: 2px; 
+    border-radius: 5px;
+    max-width: 400px;
+    max-height: 400px;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
 }
 
 .art-detail-info {
@@ -337,14 +352,14 @@ footer {
     border-color: #567d46;
     border-width: 2px; 
     border-radius: 5px;
+    margin-top:40px;
+    padding-top: 15px; 
+    padding-bottom: 15px; 
     background-color: white;
-    padding-top: 40px;
-    padding-right: 60px;
-    padding-left: 60px;
-    padding-bottom: 40px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 400px;
+    max-height: 400px
 }
 
 .image-link {
@@ -777,7 +792,7 @@ font-size: 1.3rem;
     }
 
     .furniture-img,
-    .empty-basket-image {
+    .empty-basket-image, {
         width: 290px;
         height: 290px;
     }
@@ -785,6 +800,10 @@ font-size: 1.3rem;
     .basket-image {
         width: 50px;
         height: 50px;
+    }
+
+    .art-detail-info {
+        max-width: 290px;
     }
 
 }
